--- a/index.html
+++ b/index.html
@@ -42,9 +42,11 @@
           
             
             <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
-            <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_df665bae40ade9b2af8eb1714_64311b43b9" tabindex="-1" value=""></div>
-            <div class="clear"><input class="btn btn-primary btn-xl" type="submit" value="Find Out More" name="subscribe" id="mc-embedded-subscribe" class="button"></div>
+            <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_df665bae40ade9b2af8eb1714_64311b43b9" tabindex="-1" value="">
             </div>
+            <div><input class="btn btn-primary btn-xl" type="submit" value="Find Out More" name="subscribe" id="mc-embedded-subscribe" class="button">
+            </div>
+          </div>
 </form>
 </div>
 
