--- a/index.html
+++ b/index.html
@@ -37,13 +37,13 @@
                  We recommend moving this block and the preceding CSS link to the HEAD of your HTML file. */
 </style>
     <div id="mc_embed_signup">
-      <form action="https://eliaswilliambeck.us18.list-manage.com/subscribe/post?u=df665bae40ade9b2af8eb1714&amp;id=64311b43b9" method="post"  class="validate" target="_blank" novalidate>
+      <form action="https://eliaswilliambeck.us18.list-manage.com/subscribe/post?u=df665bae40ade9b2af8eb1714&amp;id=64311b43b9" method="post" class="validate" target="_blank" novalidate>
         <div id="mc_embed_signup_scroll">
           
             
             <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
-            <div style="position: absolute; left: -1000px;" aria-hidden="true"><input type="text" name="b_df665bae40ade9b2af8eb1714_64311b43b9" tabindex="-1" value="">
-            </div>
+            <!-- <div style="position: absolute; " aria-hidden="true"><input type="text" name="b_df665bae40ade9b2af8eb1714_64311b43b9" tabindex="-1" value="">
+            </div> -->
             <div><input class="btn btn-primary btn-xl" type="submit" value="Find Out More" name="subscribe"  class="button">
             </div>
           </div>
