--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                  We recommend moving this block and the preceding CSS link to the HEAD of your HTML file. */
 </style>
     <div id="mc_embed_signup">
-      <form action="https://eliaswilliambeck.us18.list-manage.com/subscribe/post?u=df665bae40ade9b2af8eb1714&amp;id=64311b43b9" method="post" target="_blank" novalidate>
+      <form action="https://eliaswilliambeck.us18.list-manage.com/subscribe/post?u=df665bae40ade9b2af8eb1714&amp;id=64311b43b9" method="post" target="_blank">
         <div id="mc_embed_signup_scroll">
           
             
