--- a/index.html
+++ b/index.html
@@ -11,10 +11,18 @@
     than in my video. Use whichever style sheet you like best! -->
     <!-- Bootstrap CSS from a CDN. This way you don't have to include the bootstrap file yourself -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB" crossorigin="anonymous">
+      <style type="text/css">
+              #mc_embed_signup
+              {
+                clear; font:14px Helvetica,Arial,sans-serif; 
+              }
+              /* Add your own MailChimp form style overrides in your site stylesheet or in this style block.
+                 We recommend moving this block and the preceding CSS link to the HEAD of your HTML file. */
+      </style>
     <link href="//cdn-images.mailchimp.com/embedcode/slim-10_7.css" rel="stylesheet" type="text/css">
 
     <!-- My own stylesheet -->
-    <link href="style-2.css" rel="stylesheet">
+    <link href="style-2.css" rel="stylesheet" type="text/css">
   </head>
   <body>
     <header class="startup text-center text-white d-flex">
@@ -30,10 +38,10 @@
     <!-- Begin MailChimp Signup Form -->
   
   <style type="text/css">
-              /*#mc_embed_signup
+              #mc_embed_signup
               {
                 clear; font:14px Helvetica,Arial,sans-serif; 
-              }*/
+              }
               /* Add your own MailChimp form style overrides in your site stylesheet or in this style block.
                  We recommend moving this block and the preceding CSS link to the HEAD of your HTML file. */
 </style>
