--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
               /* Add your own MailChimp form style overrides in your site stylesheet or in this style block.
                  We recommend moving this block and the preceding CSS link to the HEAD of your HTML file. */
       </style>
-    <link href="//cdn-images.mailchimp.com/embedcode/slim-10_7.css" rel="stylesheet" type="text/css">
+    <!-- <link href="//cdn-images.mailchimp.com/embedcode/slim-10_7.css" rel="stylesheet" type="text/css"> -->
 
     <!-- My own stylesheet -->
     <link href="style-2.css" rel="stylesheet" type="text/css">
